<resources>
    <string name="app_name">BalPanchayat</string>
    <string name="logo">Bal Panchayat</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="login_fb">Login with facebook</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="forgot_password">forgot password ?</string>
    <string name="register">new user ? register</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="reenter_password">Re-Enter Password</string>
    <string name="new_login">already registered ? login</string>
    <string name="register_now">Register</string>
    <string name="get_password">Submit</string>
    <string name="powered_by">a mirage of hope</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!-- ============== dashbord activity ================-->
    <string name="Dashboard">Dashboard</string>
    <string name="User">Varun Dev</string>
    <string name="profile_image">Profile Image</string>
    <string name="Settings">Settings</string>
    <string name="Events">Events</string>
    <string name="Activities">Activities</string>
    <string name="You">You</string>
    <string name="Admin">Admin</string>
    <string name="Library">Library</string>
    <string name="Donate">Donate</string>
    <string name="Team">Team</string>

    <string name="contributer">
        Contributed by
        Shubham Maurya
    </string>
    <string name="testing">testing</string>


    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="card_view_text">This is another test activity</string>

    <!-- ==============  Facebook login  ============ -->
    <!--   <string name="facebook_app_id">475358603147949</string>
    <string name="fb_login_protocol_scheme">fb475358603147949</string>-->
</resources>
