<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/logg"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/team"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittext_shape"
        android:hint="@string/email"
        android:inputType="text"
        android:paddingLeft="22dp"
        android:textSize="17sp"
        android:textColor="#ec646464"
        android:textColorHint="#b66c6b6b"
        android:id="@+id/email_phone"

        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/edittext_shape"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="22dp"
        android:textSize="17sp"
        android:textColor="#ec646464"
        android:textColorHint="#b66c6b6b"
        android:id="@+id/password"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="#595757"
        android:layout_gravity="left"
        android:layout_marginTop="13dp"
        android:clickable="true"
        android:layout_marginLeft="16dp"
        android:onClick="getPassword"
        tools:ignore="OnClick"/>

    <Button
        android:id="@+id/click_to_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/button_shape"
        android:text="@string/login"
        android:textColor="#f4f4f4"
        android:textSize="16sp"
        android:foreground="?attr/selectableItemBackground"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="#595757"
        android:layout_marginTop="23dp"
        android:clickable="true"
        android:onClick="goToRegister"
        tools:ignore="OnClick"
        android:foreground="?attr/selectableItemBackground"
        android:focusable="true"/>


</LinearLayout>