<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefee"
    android:padding="16dp"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/team" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Bal Panchayat"
            android:textSize="36sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="21dp"
            android:background="@drawable/edittext_shape"
            android:hint="@string/name"
            android:inputType="text"
            android:paddingLeft="22dp"
            android:textColor="#ec646464"
            android:textColorHint="#b66c6b6b"
            android:textSize="17sp" />


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/edittext_shape"
            android:hint="@string/email"
            android:inputType="text"
            android:paddingLeft="22dp"
            android:textColor="#ec646464"
            android:textColorHint="#b66c6b6b"
            android:textSize="17sp" />


        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/edittext_shape"
            android:hint="@string/phone"
            android:inputType="text"
            android:paddingLeft="22dp"
            android:textColor="#ec646464"
            android:textColorHint="#b66c6b6b"
            android:textSize="17sp" />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/edittext_shape"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="22dp"
            android:textColor="#ec646464"
            android:textColorHint="#b66c6b6b"
            android:textSize="17sp" />


        <Button
            android:id="@+id/click_to_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="23dp"
            android:background="@drawable/button_shape"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/register_now"
            android:textColor="#f4f4f4"
            android:textSize="16sp" />


        <!--   <Button
            android:id="@+id/fb_custom_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/facebook_button_shape"
            android:text="Register with facebook"
            android:textColor="#f4e6e3e3"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="fbRegister"
            tools:ignore="OnClick"
            android:layout_marginTop="15dp"
            /> -->


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:onClick="goToLogin"
            android:text="@string/new_login"
            android:textColor="#595757"
            tools:ignore="OnClick" />

    </LinearLayout>


</RelativeLayout>



