<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#282828"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/team"
       />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/edittext_shape"
        android:hint="@string/email"
        android:inputType="text"
        android:padding="16dp"
        android:textSize="17sp"
        android:textColor="#e5c8c8c8"
        android:textColorHint="#b6c8c8c8"
        />


    <Button
        android:id="@+id/click_to_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_shape"
        android:text="@string/get_password"
        android:textColor="#ffffff"
        android:textSize="17sp"
        android:foreground="?attr/selectableItemBackground"
        />


</LinearLayout>